added .nuget folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,7 @@ publish/
 *.publishproj
 
 # NuGet Packages
-#.nuget
+.nuget
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/packages/*
